--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <ul class="gallery"></ul>
-    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.js"></script>
-    <script src="js/gallery.js"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.js"></script>
+    <script defer src="js/gallery.js"></script>
 </body>
 
 </html>
