--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <ul class="gallery"></ul>
     <script async src="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.js"></script>
-    <script defer src="js/gallery.js"></script>
+    <script defer src="./js/gallery.js"></script>
 </body>
 
 </html>
